<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StoryApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login Here</string>
    <string name="name">Name</string>
    <string name="have_account">Don\'t have account?</string>
    <string name="having_account">Already have account?</string>
    <string name="register">Register Here</string>
    <string name="warning_input">Incomplete data</string>
    <string name="success_register">Successfully register account</string>
    <string name="error_register">Failed to register account</string>
    <string name="username">Username</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="login_success">Successfully login</string>
    <string name="login_failed">Failed to login</string>
    <string name="image_story">image_story</string>
    <string name="addstory">addStory</string>
    <string name="email_format">Use Email Format</string>
    <string name="password_char">Password must be at least 8 characters</string>
    <string name="description">Description</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="failed_upload">Failed to upload Story</string>
    <string name="success_upload">Successfully upload Story</string>
    <string name="failed_take">Failed Take Photo.</string>
    <string name="failed_camera">Failed to Show Camera.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Try Again</string>
    <string name="maps">maps</string>
    <string name="mapsfailed">Maps Failed To Load</string>
    <string name="share_location">share location</string>
    <string name="take_photo">Take Photo</string>
    <string name="imagelogo">imagelogo</string>

</resources>